<resources>
    <string name="app_name">Apteczka</string>
    <string name="separator_dot">·</string>
    <string name="description_packagingIcon">Packaging icon</string>
    <string name="productView_showLeaflet">show leaflet</string>
    <string name="description_productLinkedRibbon">Product linked ribbon</string>
    <string name="productPrompt_submit">Submit</string>
    <string name="productPrompt_scan">Scan code</string>
    <string name="productPrompt_enterCode">Enter EAN code</string>
    <string name="productPrompt_unlink">Unlink</string>
    <string name="productPrompt_header">Medicinal product association</string>
    <string name="productPrompt_status_alreadyLinked">Product is already linked</string>
    <string name="productPrompt_status_notAvailable">Product identified with entered code is not available</string>
</resources>