<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="android.view.View"/>
        <import type="com.github.polydome.apteczka.view.ui.medicineeditor.ProductStatus"/>
        <import type="android.graphics.Typeface"/>
        <variable
            name="inputListener"
            type="com.github.polydome.apteczka.view.ui.medicineeditor.EanInputListener" />
        <variable
            name="productStatus"
            type="androidx.lifecycle.LiveData&lt;com.github.polydome.apteczka.view.ui.medicineeditor.ProductStatus&gt;" />
    </data>

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        tools:layout_gravity="bottom"
        android:padding="@dimen/productPrompt_layoutPadding">

        <TextView
            tools:text="Link medicinal product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/productPrompt_sectionSpacing"
            android:textSize="18sp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/productPrompt_eanInput"
            android:hint="@string/productPrompt_enterCode"
            android:drawableLeft="@drawable/ic_menu_barcode"
            android:drawableTint="@android:color/black"
            android:enabled="@{productStatus == ProductStatus.LINKED ? false : true}"
            android:typeface="@{productStatus == ProductStatus.LINKED ? Typeface.MONOSPACE : Typeface.DEFAULT}"
            android:text="@={inputListener.ean}"
            android:drawablePadding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="false"
            android:inputType="numberDecimal"
            android:drawableStart="@drawable/ic_menu_barcode" />

        <LinearLayout
            android:layout_marginTop="@dimen/productPrompt_sectionSpacing"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/productPrompt_buttonHeight">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/productPrompt_scan"
                android:text="@string/productPrompt_scan"
                android:visibility="@{productStatus == ProductStatus.LINKED ? View.GONE : View.VISIBLE}"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:icon="@drawable/ic_baseline_photo_camera_24"
                app:strokeColor="@color/colorPrimary"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

            <Space
                android:visibility="@{productStatus == ProductStatus.LINKED ? View.GONE : View.VISIBLE}"
                android:layout_width="15dp"
                android:layout_height="match_parent"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/productPrompt_submit"
                android:onClick="@{() -> inputListener.onEanInputFinished()}"
                android:text="@string/productPrompt_submit"
                android:visibility="@{productStatus == ProductStatus.LINKED ? View.GONE : View.VISIBLE}"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:icon="@drawable/ic_baseline_link_24"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/productPrompt_unlink"
                android:onClick="@{() -> inputListener.onEanCleared()}"
                android:text="@string/productPrompt_unlink"
                android:visibility="@{productStatus == ProductStatus.LINKED ? View.VISIBLE : View.GONE}"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:icon="@drawable/ic_baseline_link_off_24"
                tools:visibility="gone"/>

        </LinearLayout>

    </LinearLayout>

</layout>
