<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="model"
            type="com.github.polydome.apteczka.view.ui.medicineeditor.ProductModel" />
    </data>

    <androidx.cardview.widget.CardView
        xmlns:tools="http://schemas.android.com/tools"
        android:visibility="@{model.productExists() ? View.VISIBLE : View.GONE}"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="6dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="44dp"
                android:layout_height="match_parent"
                android:padding="4dp"
                android:src="@drawable/ic_product_linked_24"
                android:background="@color/colorPrimary"
                android:contentDescription="@string/description_productLinkedRibbon" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/productView_contentPadding">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/productView_name"
                        android:text="@{model.name}"
                        tools:text="Clatra"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/productView_textSize"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="12dp"
                        android:textSize="@dimen/productView_textSize"
                        android:textStyle="normal"
                        android:text="@string/separator_dot"/>

                    <TextView
                        android:id="@+id/productView_form"
                        tools:text="aerozol do nosa"
                        android:text="@{model.form}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/productView_textSize"
                        android:textStyle="normal"/>

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="@dimen/productView_linePadding">

                    <TextView
                        android:id="@+id/productView_commonName"
                        tools:text="Mometasoni furoas"
                        android:text="@{model.commonName}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/productView_textSize"
                        android:textStyle="italic"/>

                </LinearLayout>

                <LinearLayout
                    android:weightSum="2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:paddingVertical="@dimen/productView_linePadding"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/productView_packagingSize"
                            tools:text="30"
                            android:text="@{model.packagingSize}"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/productView_textSizeSmall"
                            android:textColor="@android:color/black"
                            android:drawablePadding="@dimen/productView_propertyIconMargin"
                            app:drawableLeftCompat="@drawable/ic_packaging_24" />

                        <TextView
                            android:id="@+id/productView_packagingUnit"
                            tools:text="tabletki"
                            android:text="@{model.packagingUnit}"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4sp"
                            android:layout_marginStart="4sp"
                            android:textSize="@dimen/productView_textSizeSmall"
                            android:textColor="@android:color/black"/>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/productView_potency"
                        tools:text="20 mg"
                        android:text="@{model.potency}"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/productView_textSizeSmall"
                        android:textColor="@android:color/black"
                        app:drawableLeftCompat="@drawable/ic_potency_24"
                        android:drawablePadding="@dimen/productView_propertyIconMargin"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/productView_linePadding"
                    android:gravity="end">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/productView_showLeaflet"
                        android:text="@string/productView_showLeaflet"
                        android:layout_width="180dp"
                        android:layout_height="60dp"
                        app:icon="@drawable/ic_baseline_receipt_24"
                        app:strokeColor="@color/colorPrimary"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</layout>
